--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+* {
+  scrollbar-width: none; 
+  -ms-overflow-style: none;  
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
